Added two user input fields

--- a/html/index.html
+++ b/html/index.html
@@ -4,16 +4,26 @@
     <!-- Ensures utf-8 chars can be used and devices are supported -->
     <meta charset = "utf-8">
     <meta name = "viewport" content = "width=device-width"/>
-    <head>
-        Real Estate Site
-    </head>
+    
+    <!--Change this tab label later-->
+    <head>Real Estate Site</head>
 
     <body>
-        <h1>
-            Project Name
-        </h1>
+        <!--Change this heading later-->
+        <h1>Real State</h1>
         
         <img src="image/HM_house.png" alt="Colorful house generated using Gemini"/>
+
+        <h2>
+            Pricing Plans
+        </h2>
+        <form>
+            <!-- Location, distance (radius), Budget (howmuch you got), price (Willing to spend)-->
+            <label for="Location"></label> Enter Location: </label><br>
+            <input type="text" id="Location" name="Location"><br>
+            <label for="distance">  Enter Radius From Location: </label><br>
+            <input type="number" id="distance" name="distance">
+        </form>
     </body>
 
 
