Two working fields

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
             <label for="Location"></label> Enter Location: </label><br>
             <input type="text" id="Location" name="Location"><br>
             <label for="distance">  Enter Radius From Location: </label><br>
-            <input type="number" id="distance" name="distance">
+            <input type="number" id="distance" name="distance"> <br><br><br><br>
         </form>
     </body>
 
