--- a/html/index.html
+++ b/html/index.html
@@ -12,18 +12,21 @@
         <!--Change this heading later-->
         <h1>Real State</h1>
         
-        <img src="image/HM_house.png" alt="Colorful house generated using Gemini"/>
+        <img src="image/HM_house.png" height= 500 width= 500 alt="Colorful house generated using Gemini"/>
 
         <h2>
             Pricing Plans
         </h2>
-        <form>
+        
+        <form> <!--action="Add the .js URL here?"" -->
             <!-- Location, distance (radius), Budget (howmuch you got), price (Willing to spend)-->
             <label for="Location"></label> Enter Location: </label><br>
-            <input type="text" id="Location" name="Location"><br>
+            <input type="text" id="Location" name="Location"><br><br>
             <label for="distance">  Enter Radius From Location: </label><br>
-            <input type="number" id="distance" name="distance"> <br><br><br><br>
+            <input type="number" id="distance" name="distance"> <br><br>
+            <input type="submit" value = "Submit"> <br><br><!--Origionally a "submit type"-->
         </form>
+
     </body>
 
 
