Added more input fields

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,10 @@
         <h2>
             Pricing Plans
         </h2>
+
+        <p>
+            Find the best location!
+        </p>
         
         <form> <!--action="Add the .js URL here?"" -->
             <!-- Location, distance (radius), Budget (howmuch you got), price (Willing to spend)-->
@@ -24,8 +28,16 @@
             <input type="text" id="Location" name="Location"><br><br>
             <label for="distance">  Enter Radius From Location: </label><br>
             <input type="number" id="distance" name="distance"> <br><br>
+        
+            <label for="Budget">  Enter Your Current Budget: </label><br>
+            <input type="number" id="Budget" name="Budget"> <br><br>
+
+            <label for="Price">  Enter Your Desired Price: </label><br>
+            <input type="number" id="Price" name="Price"> <br><br>
+
             <input type="submit" value = "Submit"> <br><br><!--Origionally a "submit type"-->
-        </form>
+        </form> <br> <br> <br>
+
 
     </body>
 
